@@ -1,6 +1,6 @@
 Package: crs
 Version: 0.15-7
-Date: 2011-10-24
+Date: 2011-10-28
 Depends:
 Suggests: np, rgl, quadprog
 Title: Categorical Regression Splines
