@@ -1,5 +1,12 @@
 Changes from Version 0.15-6 to 0.15-7 [24-Oct-2011]
 
+* Added the option to treat the continuous bandwidths as discrete with
+  lambda.discrete.num+1 values in the range [0,1] which can be more
+  computationally efficient than doing mixed integer search treating
+  the lambda as real-valued
+
+Changes from Version 0.15-6 to 0.15-7 [24-Oct-2011]
+
 * Added logical model.return to crs (default model.return=FALSE) which
   previously returned a list of models corresponding to each unique
   combination of the categorical predictors when kernel=TRUE (the
